Fixing zero based indexing.